address sonarcloud issues
Signed-off-by: Pablo Hernán Carle <pablo.carle@broadcom.com>